<resources>
    <string name="app_name">EnjoyRiding</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="continue_str">CONTINUE</string>
    <string name="guide_slide_1_desc">Guide slide_1_desc</string>
    <string name="welcome_to_enjoyriding">Welcome to EnjoyRiding</string>
    <string name="how_to_use">How to use</string>
    <string name="guide_slide_2_desc">Guide slide_2_desc</string>
    <string name="how_to_pay">How to pay</string>
    <string name="guide_slide_3_desc">Guide slide_3_desc</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">Login</string>
    <string name="user_id">Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="enter_user_id">Enter Username</string>
    <string name="never_see_again">Never see again</string>
    <string name="account_question">DON\'T HAVE AN ACCOUNT YET?</string>
    <string name="find_book_ride">Find. Book. Ride.</string>
    <string name="a_ride_just_a_button_away">A ride just a button away.</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="enter_password_again_hint">Enter password again</string>
    <string name="already_a_member_question">ALREADY A MEMBER?</string>
    <string name="remember_me_txt">Remember Me</string>
    <string name="select_bike">Select Bike</string>
    <string name="address_live_localization">Address / Live localization</string>
    <string name="your_location">Your Location</string>
    <string name="title_activity_shcedule_bike">ShceduleBikeActivity</string>
    <string name="reserve">Reserve</string>
    <string name="btn_select_hour_text">SELECT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="cancel_booking">Cancel</string>
    <string name="your_bookings">Your Bookings</string>
</resources>