<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:theme="@style/Theme.EnjoyRiding.ActivityBackgroundColor"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/lnSignUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:gravity="center_horizontal"
            android:text="@string/sign_up_text"
            android:theme="@style/Theme.EnjoyRiding.TitleText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/user_id"
            android:theme="@style/Theme.EnjoyRiding.ContentText" />

        <EditText
            android:id="@+id/edtSignupUsername"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/enter_user_id"
            android:inputType="textPersonName"
            android:paddingLeft="6dp"
            android:theme="@style/Theme.EnjoyRiding.EditText" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:theme="@style/Theme.EnjoyRiding.ContentText" />

        <EditText
            android:id="@+id/edtSignupPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingLeft="6dp"
            android:theme="@style/Theme.EnjoyRiding.EditText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/confirm_password_text"
            android:theme="@style/Theme.EnjoyRiding.ContentText" />

        <EditText
            android:id="@+id/edtSignupConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/enter_password_again_hint"
            android:inputType="textPassword"
            android:paddingLeft="6dp"
            android:theme="@style/Theme.EnjoyRiding.EditText" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up_text"
            android:theme="@style/Theme.EnjoyRiding.Button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textViewAccountQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/already_a_member_question"
                android:theme="@style/Theme.EnjoyRiding.EditText" />

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/login"
                android:theme="@style/Theme.EnjoyRiding.LinkText" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>



