<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.EnjoyRiding.ActivityBackgroundColor"
    tools:context=".MapWithBikesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.06"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:layout_margin="4dp"
            android:background="@drawable/search_border"
            android:ems="10"
            android:hint="@string/address_live_localization"
            android:inputType="text"
            android:paddingLeft="8dp"
            android:layout_gravity="center_vertical"
            android:theme="@style/Theme.EnjoyRiding.SearchText" />
        <Button
            android:id="@+id/btnCurrentPosition"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:layout_marginLeft="10dp"
            android:text="@string/your_location"
            android:drawableLeft ="@drawable/mylocationbtn"
            android:theme="@style/Theme.EnjoyRiding.LocationButton"></Button>
    </LinearLayout>

    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.86" />

    <Button
        android:id="@+id/btnSelectBike"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="0.08"
        android:text="@string/select_bike"
        android:theme="@style/Theme.EnjoyRiding.Button"></Button>
</LinearLayout>